# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ui.gni")
import("//mojo/public/mojo_application.gni")
import("//mojo/public/tools/bindings/mojom.gni")

mojo_native_application("browser") {
  sources = [
    "browser.cc",
  ]

  deps = [
    ":bindings",
    "//base",
    "//cc",
    "//examples/window_manager:bindings",
    "//mojo/application",
    "//mojo/common",
    "//mojo/converters/geometry",
    "//mojo/converters/input_events",
    "//mojo/services/geometry/public/interfaces",
    "//mojo/services/input_events/public/interfaces",
    "//mojo/services/navigation/public/interfaces",
    "//mojo/services/view_manager/public/cpp",
    "//mojo/services/view_manager/public/interfaces",
    "//third_party/icu",
    "//ui/base",
    "//ui/events:events",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//url",
  ]
}

mojom("bindings") {
  sources = [
    "browser_host.mojom",
  ]
}
