# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")
import("//mojo/public/tools/bindings/mojom.gni")

group("echo") {
  deps = [
    ":client",
    ":server",
  ]
}

mojo_native_application("client") {
  output_name = "echo_client"

  deps = [
    ":bindings",
    "//base",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
  ]

  sources = [
    "echo_client.cc",
  ]
}

mojo_native_application("server") {
  output_name = "echo_server"

  deps = [
    ":bindings",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
    "//mojo/common",
  ]

  sources = [
    "echo_server.cc",
  ]
}

mojom("bindings") {
  sources = [
    "echo.mojom",
  ]
}
