# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("embedded_app") {
  sources = [
    "embedded_app.cc",
  ]

  deps = [
    "//base",
    "//examples/bitmap_uploader",
    "//examples/window_manager:bindings",
    "//mojo/application",
    "//mojo/public/c/gles2",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
    "//mojo/services/geometry/public/interfaces",
    "//mojo/services/public/interfaces/navigation",
    "//mojo/services/view_manager/public/cpp",
    "//ui/events:events_base",
    "//ui/gfx/geometry",
    "//ui/gl",
    "//url",
  ]
}
